# dataloader

./: .gitignore  CONVENTIONS.md  IDEAS.md  README.md  dino_dali_cached_dataloader.py  dino_dali_dataloader.py  hpc_dino_dataloader.py  justfile  latest_dino_dataloader.py  main.py  pyproject.toml
artifacts/: code_audit_report.md
legacy/: dino_dali_cached_dataloader.py  hpc_dino_dataloader.py  latest_dino_dataloader.py
package/: __init__.py  checkpoint.py  config.py  distributed.py  loader.py  mixing_source.py  shard_cache.py  train.py
scripts/: benchmark.py  gen_stubs.py
src/dataloader/: loader.py  memory.py  pipeline.py
src/dino_loader/: __init__.py  augmentation.py  checkpoint.py  config.py  dali_node.py  distributed.py  loader.py  masking.py  memory.py  mixing_source.py  nodes.py  norm_utils.py  pipeline.py  pipeline_graph.py  shard_cache.py  shard_reader.py  train.py  wds_source.py
src/dino_loader/backends/: __init__.py  cpu.py  dali_backend.py  protocol.py
src/dino_loader/datasets/: __main__.py  cli.py  dataset.py  hub.py  settings.py  spec.py  stub_gen.py  utils.py
src/dino_loader/experimental/: __init__.py  dynamic_pipeline.py
src/dino_loader/monitor/: cli.py  metrics.py  otel.py  tracing.py
src/dino_loader/sources/: __init__.py  _wds_mix.py  _weights.py  hpc_source.py  protocol.py  resolution.py  wds_source.py
stubs/: dino_datasets.pyi  dino_env.pyi
tests/: conftest.py  pytest.ini  test_aug_config.py  test_checkpoint.py  test_config.py  test_cpu_backend.py  test_dali_queue.py  test_datasets_cli.py  test_loader_concurrency.py  test_loader_config.py  test_loader_cpu.py  test_masking.py  test_memory.py  test_metrics.py  test_mixing_source.py  test_monitor.py  test_multirank.py  test_nodes.py  test_pipeline.py  test_pipeline_graph.py  test_reader_adapter.py  test_shard_cache.py  test_shard_reader.py  test_shard_utils.py
tests/fixtures/: __init__.py
tests/sources/: test_mixing_source.py  test_wds_mix.py
