[project]
name = "dataloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "numpy>=2.4.2",
    "rich>=14.3.3",
    "tomli>=2.4.0",
    "torch>=2.10.0",
    "transformer-engine>=2.12.0",
    "webdataset>=1.0.2",
]
